# open_flamingo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  _optim_utils.py  pyproject.toml
open_flamingo/: __init__.py
open_flamingo/eval/: README.md  eval_datasets.py  eval_model.py  evaluate.py  rices.py  utils.py  vqa_metric.py
open_flamingo/eval/models/: blip.py  open_flamingo.py
open_flamingo/scripts/: cache_rices_features.py  convert_mmc4_to_wds.py  fill_vqa_testdev_results.py
open_flamingo/src/: factory.py  flamingo.py  flamingo_lm.py  helpers.py
open_flamingo/train/: README.md  data.py  data_utils.py  distributed.py  train.py  train_utils.py
